# nexum

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  IMPL_AUTOGEN_DEMO.md  LICENSE  README.md  docker-compose.yml  idea.md  idea2.md  idea3.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
cmd/nexum/: IMPL_SUMMARY.md  go.mod  go.sum  main.go
crates/nexum-server/: Cargo.toml  build.rs
crates/nexum-server/src/: main.rs
examples/approval-demo/: package.json
examples/autogen-nexum/: README.md  demo.py  submit_task.py  worker.py  workflow.py
examples/autogen-recovery-demo/: README.md  crash_demo.py  requirements.txt  worker.py  workflow.py
examples/core/: README.md
examples/crawl4ai-nexum/: README.md  benchmark.py  crawler.py  worker.py
examples/deep-research-nexum/: benchmark.py  report.md  researcher.py  worker.py
examples/demo/: package.json  run.ts
examples/gpt-researcher-nexum/: README.md  benchmark.py  demo.py
examples/integrations/: README.md
examples/llm-demo/: .env.example  complex.ts  package.json  run.ts
examples/map-demo/: package.json  run.ts
examples/parallel-demo/: package.json
examples/ragas-nexum/: benchmark.py  dataset.py  evaluator.py  worker.py
examples/router-demo/: package.json  run.ts
examples/scrapegraph-nexum/: benchmark.py  scraper.py  worker.py
examples/smolagents-nexum/: README.md  benchmark.py  benchmark_controlled.py  demo.py  submit_task.py  worker.py  workflow.py
examples/subworkflow-demo/: run.ts  (+1 more)
(+106 files in other folders)
